--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,10 @@
         android:title="Logout"
         android:visible="true"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_addemployee"
+        android:title="Add Employee"
+        android:visible="true"
+        app:showAsAction="never" />
 </menu>
