--- a/app/src/main/res/layout/content_list.xml
+++ b/app/src/main/res/layout/content_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:background="@color/colorAlt"
+    android:background="@color/colorText"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
@@ -15,20 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorForeign"
         android:textSize="16dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/empId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:textColor="@color/colorText" />
+        android:textColor="@color/colorForeign" />
 </RelativeLayout>
