--- a/app/src/main/res/layout/fragment_employee_detail.xml
+++ b/app/src/main/res/layout/fragment_employee_detail.xml
@@ -79,6 +79,8 @@
                 android:paddingRight="30dp">
               <!--         List        -->
 
+                <include layout="@layout/content_main"/>
+
             </LinearLayout>
 
 
