--- a/app/src/main/res/layout/asset_card.xml
+++ b/app/src/main/res/layout/asset_card.xml
@@ -15,25 +15,25 @@
         android:background="@color/colorBg"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/assetImage"
             android:layout_width="120dp"
             android:layout_height="90dp"
             android:padding="4dp" />
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/assetName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="1dp"
             android:textColor="@color/colorForeign"
             android:textSize="18sp" />
         <TextView
-            android:id="@+id/txtDistance"
+            android:id="@+id/assetCondition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="1dp"
             android:textColor="@color/colorForeign" />
         <TextView
-            android:id="@+id/txtDiameter"
+            android:id="@+id/assetStatus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="1dp"
