this commit adds list of items

--- a/employees/src/main/res/layout/activity_create_account.xml
+++ b/employees/src/main/res/layout/activity_create_account.xml
@@ -77,13 +77,13 @@
             android:text="Sign up"
             android:background="@color/colorAlt"
             android:layout_marginTop="15dp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorText" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorText"
             android:textStyle="bold"
             android:textSize="15sp"
             android:text="Already have an account? Log in here!"
@@ -95,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Create Account"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorText"
         android:textSize="30dp"
         android:textStyle="bold"
         android:layout_above="@+id/linearLayout"
