added employee module

--- a/employees/src/main/res/layout/activity_main.xml
+++ b/employees/src/main/res/layout/activity_main.xml
@@ -20,4 +20,17 @@
         android:layout_height="fill_parent"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/requestButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAlt"
+        android:padding="10dp"
+        android:text="Request section"
+        android:textColor="@color/colorText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
