--- a/app/src/main/res/layout/activity_employee_detail.xml
+++ b/app/src/main/res/layout/activity_employee_detail.xml
@@ -14,13 +14,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.viewpager.widget.PagerTabStrip
-            android:id="@+id/pagerHeader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp" />
+<!--        <androidx.viewpager.widget.PagerTabStrip-->
+<!--            android:id="@+id/pagerHeader"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="top"-->
+<!--            android:paddingTop="4dp"-->
+<!--            android:paddingBottom="4dp" />-->
 
     </androidx.viewpager.widget.ViewPager>
 
