--- a/app/src/main/res/layout/asset_card.xml
+++ b/app/src/main/res/layout/asset_card.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:background="@color/colorBg"
+        android:background="@color/colorBgLight"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/assetImage"
