--- a/app/src/main/res/layout/fragment_employee_detail.xml
+++ b/app/src/main/res/layout/fragment_employee_detail.xml
@@ -46,7 +46,7 @@
                 android:layout_alignTop="@+id/assetNameTextView"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:textColor="@color/colorBg"
+                android:textColor="@color/colorBgLight"
                 android:textStyle="bold" />
 
 
