--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorBg</item>
+        <item name="colorPrimary">@color/colorBgLight</item>
         <item name="colorPrimaryDark">@color/colorAlt</item>
         <item name="colorAccent">@color/colorText</item>
     </style>
     <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
+
         <item name="windowNoTitle">true</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
