--- a/employees/src/main/res/layout/activity_requestasset.xml
+++ b/employees/src/main/res/layout/activity_requestasset.xml
@@ -71,4 +71,12 @@
         android:text="Request"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible" />
 </LinearLayout>
