--- a/app/src/main/res/layout/fragment_employee_detail.xml
+++ b/app/src/main/res/layout/fragment_employee_detail.xml
@@ -39,13 +39,27 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/sendAssetTextView"
+                android:layout_width="149dp"
                 android:layout_height="wrap_content"
-                android:text="davisdavy96@gmail.com"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginLeft="252dp"
+                android:layout_marginEnd="20dp"
+                android:text="Send Asset"
+                android:textColor="@color/colorBgLight"
+                android:textSize="20sp"
+                android:textStyle="italic" />
+
+            <TextView
                 android:id="@+id/ratingTextView"
+                android:layout_width="203dp"
+                android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/assetNameTextView"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
+                android:layout_marginTop="36dp"
+                android:layout_marginRight="205dp"
+                android:text="davisdavy96@gmail.com"
                 android:textColor="@color/colorBgLight"
                 android:textStyle="bold" />
 
